--- a/bitrix/templates/.default/components/bitrix/system.pagenavigation/navigation/style.css
+++ b/bitrix/templates/.default/components/bitrix/system.pagenavigation/navigation/style.css
@@ -1,4 +1,5 @@
-div.modern-page-navigation { 
+div.modern-page-navigation {
+	border: 1px solid blue;
 	padding: 0.5em 0;}
 div.modern-page-navigation a, 
 span.modern-page-current, 
